--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,10 +1,10 @@
-fastapi==0.116.1
-uvicorn==0.35.0
-yt-dlp==2025.7.21
-ollama==0.5.1
-openai==1.97.0
-python-multipart==0.0.20
-pydantic==2.11.7
-schedule==1.2.2
-pytz==2025.2
-requests==2.32.4
+fastapi
+uvicorn
+yt-dlp
+ollama
+openai
+python-multipart
+pydantic
+schedule
+pytz
+requests
